# token-migrator

./: Anchor.toml  README.md  admin.json  new_keypair.json  package.json  tsconfig.json
.claude/skills/deploy-notes/: SKILL.md
.github/actions/solana/program-upgrade/: action.yaml
.github/actions/solana/verify-build/: action.yaml
.github/actions/solana/write-idl-buffer/: action.yaml
.github/actions/solana/write-program-buffer/: action.yaml
.github/workflows/: deploy.yaml  generate-verifiable-builds.yaml  reusable-build.yaml  verified-build.yaml
programs/metadao-migrate/: Cargo.toml
programs/metadao-migrate/src/: constants.rs  events.rs  lib.rs  state.rs
programs/metadao-migrate/src/contexts/: initialize.rs  migrate.rs
programs/token-migrator/: Cargo.toml
programs/token-migrator/src/: errors.rs  events.rs  lib.rs  state.rs
programs/token-migrator/src/contexts/: initialize.rs  migrate.rs  mod.rs
scripts/: consts.ts  initialize.ts  migrate.ts
sdk/: package.json  tsconfig.json
sdk/src/v0.1/: TokenMigratorClient.ts  constants.ts  index.ts
sdk/src/v0.1/idl/: token_migrator.json
sdk/src/v0.1/types/: index.ts  token_migrator.ts
sdk/src/v0.1/utils/: pda.ts
tests/: metadao-migrate.ts  token-migrator.ts
